第二次提交一些东西

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.scwang.smartrefresh.layout.SmartRefreshLayout
-    android:background="#444444"
+    android:background="#ffffff"
     app:srlPrimaryColor="#444444"
     app:srlAccentColor="@android:color/white"
     app:srlEnablePreviewInEditMode="true"
@@ -11,7 +11,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.chenyuan.demo.activity.MainActivity">
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv"
         android:layout_width="match_parent"
