--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="btn_normal">#ff0000</color>
+    <color name="btn_pressed">#999999</color>
+    <color name="inactive">#999999</color>
+    <color name="background_gray">#55000000</color>
+
 </resources>
