--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,9 @@
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>-->
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_toolbar"
-        android:paddingTop="@dimen/y15"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/inactive"
+        android:background="@color/hongse"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -42,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="消息"
+            android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="20sp"/>
     </android.support.v7.widget.Toolbar>
