--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -2,14 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#ff0000"
               android:orientation="vertical">
-    <TextView
-        android:id="@+id/tv"
-        android:text="哈哈哈哈"
-        android:gravity="center"
+    <ExpandableListView
+        android:id="@+id/elv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
